--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@sphereon/pex": "^5.0.0-unstable.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
