--- a/.github/workflows/shock-test.yml
+++ b/.github/workflows/shock-test.yml
@@ -44,8 +44,7 @@ jobs:
       
       - name: Upload reports
         if: always()
-        uses: actions/upload-artifact@v3
-        with:
+      uses: actions/upload-artifact@v4        with:
           name: shock-test-reports
           path: reports/
           retention-days: 7
