chore: upgrade upload-artifact from v3 to v4 in verify-pipeline

--- a/.github/workflows/verify-pipeline.yml
+++ b/.github/workflows/verify-pipeline.yml
@@ -71,8 +71,7 @@ jobs:
 
       - name: 📊 Upload Test Reports
         if: always()
-        uses: actions/upload-artifact@v3
-        with:
+      uses: actions/upload-artifact@v4        with:
           name: shock-test-reports
           path: |
             .reports/
