--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.8",
+        "@vercel/kv": "^3.0.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@sphereon/pex": "^5.0.0-unstable.28",
     "class-variance-authority": "^0.7.1",
