--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@vercel/kv": "^3.0.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@sphereon/pex": "^5.0.0-unstable.28",
+    "@vercel/kv": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
